# NestedAE

./: .gitignore  LICENSE  README.md  go.sh  install.sh  nestedae.yml  predict.py  preprocess.py  pyproject.toml  train.py  user_guide.md
code/: __init__.py  go.sh  nestedae.yml  predict.py  preprocess_data.py  train.py
code/.ipynb_checkpoints/: nested_ae-checkpoint.ipynb  view_plots_and_diagrams-checkpoint.ipynb
code/inputs_example/: dataset_inputs.py  nn_inputs.py  train_inputs.py
code/inputs_perov_data/: dataset_inputs.py  nn_inputs.py  train_inputs.py
code/inputs_syn_data/: dataset_inputs.py  nn_inputs.py  train_inputs.py
code/nn/: vanilla_ae.py
code/utils/: __init__.py  analysis.ipynb  analysis_original.ipynb  analysis_synthetic_data.ipynb  concatenate_latents.ipynb  custom_utils.py  dataset_utils.py  nn_utils.py  plot_utils.py
datasets/PSC_bandgaps/: README  download_dataset.py
datasets/PSC_efficiencies/: PSC_efficiencies_dataset.csv  PSC_efficiencies_dataset_2.csv  README  create_efficiencies_dataset.ipynb
datasets/synthetic_dataset/: synthetic_data.csv  synthetic_data_FuncAddNoise_200.csv
inputs_perov_data/: dataset_inputs.py  nn_inputs.py  train_inputs.py
runs/perovskite_multiscale_dataset_3/: list_of_nn_datasets_dict.pkl
runs/perovskite_multiscale_dataset_runs/: five_random_split_metrics.xlsx  list_of_nn_params_dict.pkl
runs/test_nt/: list_of_nn_datasets_dict.pkl  list_of_nn_params_dict.pkl  list_of_nn_train_params_dict.pkl  run_summary.txt
src/NestedAE/: nn_utils.py
src/NestedAE.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_ae.py  test_dataset_utils.py  test_nn_utils.py
tests/test_datasets/: combined_test_datasets.pt  combined_test_datasets_preview.csv  sample_test_dataset.csv  (+9 more)
(+78 files in other folders)
